@@ -113,6 +113,45 @@ public class FlatJava5Test extends AbstractFlatJava5Test {
         }
     }
 
+    public void testFieldsOnlySelectByExampleDistinct() {
+        FieldsonlyDAO dao = getFieldsonlyDAO();
+
+        try {
+            Fieldsonly record = new Fieldsonly();
+            record.setDoublefield(11.22);
+            record.setFloatfield(33.44);
+            record.setIntegerfield(5);
+            dao.insert(record);
+            dao.insert(record);
+            dao.insert(record);
+
+            record = new Fieldsonly();
+            record.setDoublefield(44.55);
+            record.setFloatfield(66.77);
+            record.setIntegerfield(8);
+            dao.insert(record);
+
+            record = new Fieldsonly();
+            record.setDoublefield(88.99);
+            record.setFloatfield(100.111);
+            record.setIntegerfield(9);
+            dao.insert(record);
+
+            FieldsonlyExample example = new FieldsonlyExample();
+            example.createCriteria().andIntegerfieldEqualTo(5);
+            example.setDistinct(true);
+
+            List<Fieldsonly> answer = dao.selectByExample(example);
+            assertEquals(1, answer.size());
+
+            example.clear();
+            answer = dao.selectByExample(example);
+            assertEquals(5, answer.size());
+        } catch (SQLException e) {
+            fail(e.getMessage());
+        }
+    }
+    
     public void testFieldsOnlySelectByExampleNoCriteria() {
         FieldsonlyDAO dao = getFieldsonlyDAO();
 
@@ -139,6 +178,9 @@ public class FlatJava5Test extends AbstractFlatJava5Test {
             example.createCriteria();
 
             List<Fieldsonly> answer = dao.selectByExample(example);
+            assertEquals(3, answer.size());
+
+            answer = dao.selectByExample(null);
             assertEquals(3, answer.size());
         } catch (SQLException e) {
             fail(e.getMessage());
